src/objects/QPMS__Inspection_Standard_Criteria__c.object
<CustomObject>
    <description>Junction object between Inspection Standard and Criteria</description>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <description>This will store the name</description>
        <label>Criteria Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Criteria</description>
        <label>Criteria</label>
        <referenceTo>QPMS__Criteria__c</referenceTo>
        <relationshipLabel>Inspection Standard Criterias</relationshipLabel>
        <relationshipName>Inspection_Standard_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This will hold description of attribute used in inspection standard criteria</description>
        <label>Description</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Criteria_Type__c</fullName>
        <description>Inspection Criteria Type</description>
        <label>Inspection Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Criteria_Name__c</fullName>
        <formula>QPMS__Criteria__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Standard Criteria Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection standard object</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipName>Inspection_standard_criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Instruction__c</fullName>
        <description>This will hold instruction for attribute used in inspection criteria</description>
        <label>Instruction</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>This field will hold unit of measurement.</description>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity_Name__c</fullName>
        <formula>QPMS__Severity__r.Name</formula>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Risk severity</description>
        <label>Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Inspection Standard Criterias</relationshipLabel>
        <relationshipName>Inspection_Standard_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <description>This field will hold tolerance value.</description>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <description>This will hold tolerance value.</description>
        <label>Tolerance (+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inspection Standard Criteria</label>
    <nameField>
        <displayFormat>INSC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Standard Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>